Bug 123632 - Accessibility: Writer crashes while browsing the images if Orca is on
Summary: Accessibility: Writer crashes while browsing the images if Orca is on
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.0.5 target:7.1.0.2
Keywords: accessibility, wantBacktrace
Depends on:
Blocks:
 
Reported: 2019-02-21 16:44 UTC by Jean-Philippe MENGUAL
Modified: 2021-09-06 20:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File wfor test (194.27 KB, text/plain)
2019-02-21 16:48 UTC, Jean-Philippe MENGUAL
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Philippe MENGUAL 2019-02-21 16:44:44 UTC
Description:
Libreoffice crashes in a document while browsing the images via the browser, the key board, with Orca screen reader enabled

Steps to Reproduce:
1. orca enabled, accessibility enabled on the desktop environment (GTK): to test it works, just press the down arrow key, the voice should speak the text of the file. Ue GTK libreoffice version (libreoffice-gtk2 or gtk3)
2. In the attached file, press f5 to open the brower
3. Close the tree via left arrow (on master, press tab first)
4. Down until Images and press the Right key to scroll down
5. Down until the first image and press Enter



Actual Results:
LO crashes. If you press tice the down key then once up, crash as well.

Regards


Expected Results:
Put the caret in the image field.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.5.2
Build ID: 1:6.1.5-1
Threads CPU : 4; OS : Linux 4.19; UI Render : par défaut; VCL: gtk2; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
Comment 1 Jean-Philippe MENGUAL 2019-02-21 16:48:26 UTC
Created attachment 149492 [details]
File wfor test
Comment 2 Patrick ZAJDA 2019-02-26 15:44:11 UTC
I can confirm this bug on Linux with version: 6.3.0.0.alpha0+
Build ID: 140fd0a1b1da1b0b14bda17c926dd8f95750ba92
Threads CPU : 12; OS : Linux 4.19; UI Render : par défaut; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-02-26_01:24:44
Locale : fr-FR (fr_FR.UTF-8); Langue IHM : fr-FR
Calc: threadedt

On Windows, arrows trow an error but Writer doesn't crash, when pressing escape the document content is focused on the image.
Tested with NVDA alpha-16850,b980d53e
LibreOffice version: 6.3.0.0.alpha0+ (x64)
 Build ID: 140fd0a1b1da1b0b14bda17c926dd8f95750ba92
 CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
 TinderBox: Win-x86_64@42, Branch:master, Time: 2019-02-25_23:41:57
 Locale: fr-FR (fr_FR); UI-Language: en-US
 Calc: threaded
Comment 3 Commit Notification 2021-01-11 09:47:30 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/003b45624788610fba98e3f3334f99140017e472

Related tdf#123632: fix crash in accdoc (sw)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-01-11 16:55:02 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/3745df317f500e95a301f0a883111ec2c7f06405

Related tdf#123632: fix crash in accdoc (sw)

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-01-12 10:05:21 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/9176d828cb84bb6f74712972f1f21e2f446c5e9d

Related tdf#123632: fix crash in accdoc (sw)

It will be available in 7.1.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2021-01-12 16:46:22 UTC
Could someone give a try with a recent daily build which includes last patch?

If it's reproduced, would it be possible to have a backtrace? (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace)
Comment 7 Julien Nabet 2021-09-06 20:11:30 UTC
Let's put this one to FIXED since there's no feedback after the patch.

Of course, don't hesitate to reopen this tracker if you can still reproduce this.