Related tdf#123632: fix crash in accdoc (sw)

Make sure to use gtk3 rendering
- Open https://bugs.documentfoundation.org/attachment.cgi?id=149492
- Click F5 to open the navigator
- Go to Images
- Try double click the third and last image at least 15 times
-> crash, here's part of bt:
Thread 1 "soffice.bin" received signal SIGSEGV, Segmentation fault.
SwFrame::IsInTab (this=0x0) at sw/source/core/inc/frame.hxx:938
938	    if ( mbInfInvalid )
(gdb) bt
0  SwFrame::IsInTab() const (this=0x0) at sw/source/core/inc/frame.hxx:938
1  0x00007fd7e78caf9c in SwAccessibleDocument::getExtendedAttributes() (this=0x7e4e090) at sw/source/core/access/accdoc.cxx:596
2  0x00007fd7e78cbf9d in non-virtual thunk to SwAccessibleDocument::getExtendedAttributes() () at sw/source/core/access/accdoc.cxx:708
3  0x00007fd7f18f90ad in attribute_set_new_from_extended_attributes(com::sun::star::uno::Reference<com::sun::star::accessibility::XAccessibleExtendedAttributes> const&)
    (rExtendedAttributes=uno::Reference to (SwAccessibleDocument *) 0x7e4e180) at vcl/unx/gtk3/a11y/gtk3atktextattributes.cxx:1229
4  0x00007fd7f19113f3 in wrapper_get_attributes(_AtkObject*) (atk_obj=0x7df37d0) at vcl/unx/gtk3/a11y/gtk3atkwrapper.cxx:394

I put "Related" because I don't know if it corresponds to the initial bug
but I used the attached file of the bugtracker

Change-Id: Ief9fda9f7bcf277d18490169eee2e43fb046a1bf