sw/source/core/access/accdoc.cxx
@@ -582,7 +582,7 @@ uno::Any SAL_CALL SwAccessibleDocument::getExtendedAttributes()
         {
             if (!(pCurrTextFrame->IsInTab() || pCurrTextFrame->IsInFootnote()))
             {
-                while( pTextFrame != pCurrTextFrame )
+                while( pTextFrame && pTextFrame != pCurrTextFrame )
                 {
                     //check header/footer
                     pFrame = pTextFrame;
